added alert functionality

--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
 
   </head>
   <body>
+    <nav>
     <h1 class='main-h1'>Nurbek Ismailov</h1>
-    <h2>Biography</h2>
+    <h2 id=bio>Biography</h2>
 
-    <p>List of Education</p>List of Experience
+    <h3>List of Education</3>
+    <p> Code Fellows - Cum Loude <a href="https://www.codefellows.org//">Visit Codefellows</a></p>
 
     <p>List of Goals</p>
+    <p>Finish 201 with <strong>Gold Medal</strong> and bild a cool app/website that will make a positive impact to the humanity</p>
+
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
-
-    <script src=app.js> </script>
+    </nav>
+    <script src=app.js></script>
 
   </body>
 </html>
