changes to saturday1,added img

--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
 
   </head>
   <body>
-    <nav>
-    <h1 class='main-h1'>Nurbek Ismailov</h1>
-    <h2 id=bio>Biography</h2>
+    <main>
+    <h1 id=bio>Nurbek Ismailov</h1>
+    <h2>Experience</h2>
+    <p>Mortgage Analyst at Homestreet Bank</p>
 
-    <h3>List of Education</3>
-    <p> Code Fellows - Cum Loude <a href="https://www.codefellows.org//">Visit Codefellows</a></p>
+    <h3 class="one">List of Education</3>
+    <p>University of Great Falls- BA degree <a href="http://www.ugf.edu/">Visit UGF</a><p>
+    <p> Code Fellows -  <a href="https://www.codefellows.org//">Visit Codefellows</a></p>
 
-    <p>List of Goals</p>
-    <p>Finish 201 with <strong>Gold Medal</strong> and bild a cool app/website that will make a positive impact to the humanity</p>
+    <p class="one">List of Goals</p>
+    <p>Finish 401 with <strong>Sucess</strong> and bild a cool app/websites </p>
+    <p>Build a Sucessful Bussiness</p>
 
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    </nav>
+    <p>Code every awake available hours until successful</p>
+    </main>
+    <footer>&copy; 2016 Nurbek International Group Inc.
+      <img src="twitter-logo.png" alt="Twitter logo"/>
+    </footer>
     <script src=app.js></script>
 
   </body>
