added array fr yes,no qust

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
     <h1 id=bio>Nurbek Ismailov</h1>
     <h2>Experience</h2>
+    <p id='outcome'> </p>
     <p>Mortgage Analyst at Homestreet Bank</p>
 
     <h3 class="one">List of Education</3>
