added array for text qstns.

--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
   <body>
     <main>
     <h1 id=bio>Nurbek Ismailov</h1>
-    <h2>Experience</h2>
-    <p id='outcome'> </p>
+    <h1 id='outcome'> </h1>
+    <h1>Experience</h1>
+
     <p>Mortgage Analyst at Homestreet Bank</p>
 
-    <h3 class="one">List of Education</3>
-    <p>University of Great Falls- BA degree <a href="http://www.ugf.edu/">Visit UGF</a><p>
+    <h1 class="one">List of Education</h1>
+    <p>University of Great Falls- BA degree <a href="http://www.ugf.edu/">Visit UGF</a></p>
     <p> Code Fellows -  <a href="https://www.codefellows.org//">Visit Codefellows</a></p>
 
-    <p class="one">List of Goals</p>
+    <h1 class="one">List of Goals</h1>
     <p>Finish 401 with <strong>Sucess</strong> and bild a cool app/websites </p>
     <p>Build a Sucessful Bussiness</p>
 
     <p>Code every awake available hours until successful</p>
     </main>
     <footer>&copy; 2016 Nurbek International Group Inc.
-      <img src="twitter-logo.png" alt="Twitter logo"/>
+      <a href='https://twitter.com/'><img src="twitter-logo.png" alt="Twitter"/> <a/>
     </footer>
     <script src=app.js></script>
 
