created arr 4 corr n wrong ans

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <p> Code Fellows -  <a href="https://www.codefellows.org//">Visit Codefellows</a></p>
 
     <h1 class="one">List of Goals</h1>
-    <p>Finish 401 with <strong>Sucess</strong> and bild a cool app/websites </p>
+    <p>Finish 401 with <strong>Sucess</strong> and build a cool apps/websites </p>
+    <p>Get an Internship in Amazon.com </p>
     <p>Build a Sucessful Bussiness</p>
+    <p>Plant a Fig Tree in my Garden</p>
 
     <p>Code every awake available hours until successful</p>
     </main>
