tue changes to branhch

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Mortgage Analyst at Homestreet Bank</p>
 
     <h1 class="one">List of Education</h1>
-    <p>University of Great Falls- BA degree <a href="http://www.ugf.edu/">Visit UGF</a></p>
+    <p>University of Great Falls- BA degree <a href="http://www.ugf.edu/" target="_blank">Visit UGF</a></p>
     <p> Code Fellows -  <a href="https://www.codefellows.org//">Visit Codefellows</a></p>
 
     <h1 class="one">List of Goals</h1>
