right,wrong answrs display

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <h1 class="one">List of Education</h1>
     <p>University of Great Falls- BA degree <a href="http://www.ugf.edu/" target="_blank">Visit UGF</a></p>
-    <p> Code Fellows -  <a href="https://www.codefellows.org//">Visit Codefellows</a></p>
+    <p> Code Fellows -  <a href="https://www.codefellows.org//" target='_blank'>Visit Codefellows</a></p>
 
     <h1 class="one">List of Goals</h1>
     <p>Finish 401 with <strong>Sucess</strong> and build a cool apps/websites </p>
@@ -27,7 +27,7 @@
     <p>Code every awake available hours until successful</p>
     </main>
     <footer>&copy; 2016 Nurbek International Group Inc.
-      <a href='https://twitter.com/'><img src="twitter-logo.png" alt="Twitter"/> <a/>
+      <a href='https://twitter.com/' target="_blank"><img src="twitter-logo.png" alt="Twitter"/> <a/>
     </footer>
     <script src=app.js></script>
 
